--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      <h1>Travel to Costa Rice</h1>
                      
      <p>...and you'll get to see these beauties!</p>
-     <img src="http://www.kasandbox.org/programming-images/animals/crocodiles.png" alt="Scary crocodiles" width="200"/>
+     <img src="https://www.kasandbox.org/programming-images/animals/crocodiles.png" alt="Scary crocodiles" width="200"/>
   </body>                                                                                                            
 </html>                                                                                                              
                      
