--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head> 
 <title> My Personal Website </title>
 </head>
+  
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q2DTV18YY6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Q2DTV18YY6');
+</script>
 
 <body bgcolor="white" text="blue">
 
