--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
        <label for="menu-box" class="menu-bar">
          <i class="fas fa-bars"></i>
        </label>
-       <a class="logo" href="Home.php">KidsFit</a>
+       <a class="logo" href="Home.php">Desire</a>
        <ul class="links">
-         <li><a href="Home.php">HOME</a></li>
+         <li><a href="#">HOME</a></li>
          <li>
-           <a href="#">PROGRAM</a>
+           <a href="#">Products</a>
            <i class="fas fa-angle-down arrow program-arrow"></i>
 
            <ul class="program-sub-menu sub-menu">
-             <li><a href="#">Fitness</a></li>
-             <li><a href="#">Fitness</a></li>
-             <li><a href="#">Fitness</a></li>
+             <li><a href="#">Utilities</a></li>
+             <li><a href="#">Electronics</a></li>
+             <li><a href="#">Outfits</a></li>
            </ul>
          </li>
          <li><a href="calender.php">CALENDER</a></li>
