--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
        <label for="menu-box" class="menu-bar">
          <i class="fas fa-bars"></i>
        </label>
-       <a class="logo" href="Home.php">Desire</a>
+       <a class="logo">Desire</a>
        <ul class="links">
          <li><a href="#">HOME</a></li>
          <li>
