--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-<html> 
+ <!DOCTYPE html>
+ <html lang="en" dir="ltr">
 
-<head> 
-<title> My Personal Website </title>
-</head>
+ <head>
+   <meta charset="UTF-8">
+   <title>KidsFit</title>
+   <link rel="stylesheet" href="style.css">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ </head>
   
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q2DTV18YY6"></script>
