--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
   <div class"container">
    <div class="left">
     <h1>Desire</h1>
-    <p>Dreams come true when desiretransform into</p>
-    <p>concrete actions</p>
+    <p>Dreams come true when desiretransform into concrete actions</p>
    </div>
   </div>
 
