--- a/index.html
+++ b/index.html
@@ -22,20 +22,7 @@
   <header>
      <nav class="navbar">
        </label>
-       <a class="logo">Desire</a>
-       <ul class="links">
-         <li><a href="#">HOME</a></li>
-         <li>
-           <a href="#">Products</a>
-           <i class="fas fa-angle-down arrow program-arrow"></i>
-
-           <ul class="program-sub-menu sub-menu">
-             <li><a href="#">Utilities</a></li>
-             <li><a href="#">Electronics</a></li>
-             <li><a href="#">Outfits</a></li>
-           </ul>
-         </li>
-       </ul>
+       <a class="logo" href="index.html">Desire</a>
 
        <label for="search-box" class="search-bar">
          <i class="fas fa-search"></i>
