--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 
  <head>
    <meta charset="UTF-8">
-   <title>KidsFit</title>
+   <title>Desmond Yeoh Zi Jian</title>
    <link rel="stylesheet" href="style.css">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  </head>
   
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -22,7 +21,7 @@
   <header>
      <nav class="navbar">
        </label>
-       <a class="logo" href="index.html">Desire</a>
+       <a class="logo" href="index.html">Desmond Yeoh</a>
        </label>
      </nav>
   </header>
