--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
      </nav>
   </header>
   
-  <div class"container">
-   <div class="left">
-    <h1>Hi,<br> I'm<span style="color:#749bff">Desmond</span></h1>
-    <br>
-    <p>Dreams come true when desire transform into concrete actions</p>
+  <section id=me>
+   <div class"container">
+    <div class="left">
+     <h1>Hi,<br> I'm<span style="color:#749bff">Desmond</span></h1>
+     <br>
+     <p>Dreams come true when desire transform into concrete actions</p>
+    </div>
    </div>
-  </div>
+  </section>
 
 </body>
 
