--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
     </div>
     
     <div class="right">
-     ![mmexport1553439707484](https://user-images.githubusercontent.com/98371502/153760713-c27b75ce-061d-4fcc-a83d-e7aac307d5a4.jpg)
-
+     <img src="mmexport1553439707484.jpg" width:100>
     </div>
    </div>
   </section>
