--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     
     <div class="right">
-     <img src="mmexport1553439707484.jpg" width:100>
+     <img src="mmexport1553439707484.jpg" style="width:50%">
     </div>
    </div>
   </section>
