--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      </nav>
   </header>
   
-  <section>
+  <section id="me">
    <div class"container">
     <div class="left">
      <h1>Hi,<br> I'm<span style="color:#749bff"> Desmond</span></h1>
