--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="left">
      <h1>Hi,<br> I'm<span style="color:#749bff"> Desmond</span></h1>
      <br>
-     <p>Dreams come true when desire transform into concrete actions</p>
+     <p>Web Develope, with extensive knowledge and years of experience, working in quality work.</p>
     </div>
     <div class="right">
      <img src="mmexport1553439707484.jpg" style="width:50%">
