--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   </header>
   
   <section id="me">
+   <div class="container">
     <div class="left">
      <h1>Hi,<br> I'm<span style="color:#749bff"> Desmond</span></h1>
      <br>
@@ -35,6 +36,7 @@
     <div class="right">
      <img src="mmexport1553439707484.jpg" style="width:55%">
     </div>
+   </div>
   </section>
 
 </body>
