--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   </header>
   
   <section id="me">
+   <div class="container">
     <div class="left">
      <h1>Hi,<br> I'm<span style="color:#749bff"> Desmond</span></h1>
      <br>
@@ -35,7 +36,19 @@
     <div class="right">
      <img src="mmexport1553439707484.jpg" style="width:55%">
     </div>
+   </div>
   </section>
+
+   <section id="about">
+     <div class="about-row">
+      
+       <div class="about-col">
+          <h2>About <span style="color:#74b9ff">me</span></h2>
+         <p>Details</p>
+         <p>My name is Desmond Yeoh. Born on 24th of March 1999.Live in Kuala Lumpur. Currently studying in YPC International College.</p>
+       </div>
+     </div>
+   </section>
 
 </body>
 
