--- a/index.html
+++ b/index.html
@@ -50,6 +50,29 @@
      </div>
    </section>
 
+   <section>
+   <div class="eNs">
+     <div class="experience">
+       <h2>My<span style="color:#74b9ff"> Experiences</h2>
+       <p>Education</p>
+       <p>
+         Secondary School - SMK COCHRANE PERKASA
+         BSC.(Hons) Multimedia Computing - YPC International College
+        </p>
+     </div>
+      
+     <div class="skill">
+       <h2>My<span style="color:#74b9ff"> Skills</h2>
+       <p>
+        Adobe After Effects
+        Adobe Premiere Pro
+        Adobe Photoshop
+        And so on...
+       </p>
+     </div>
+   </div>
+   </section>
+
 </body>
 
 </html>
