--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
      </div>
    </section>
 
-   <section>
-   <div class="eNs">
-     <div class="experience">
+   <section id="eNs">
+   <div class="eNs-col">
+     <div class="experience-right-col">
        <h2>My<span style="color:#74b9ff"> Experiences</h2>
        <p>Education</p>
        <p>
@@ -61,7 +61,7 @@
         </p>
      </div>
       
-     <div class="skill">
+     <div class="skill-left-col">
        <h2>My<span style="color:#74b9ff"> Skills</h2>
        <p>
         Adobe After Effects
