--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
    <section id="eNs">
    <div class="eNs-col">
-     <div class="experience-right-col">
+     <div class="experience-left-col">
        <h2>My<span style="color:#74b9ff"> Experiences</h2>
        <p>Education</p>
        <p>
@@ -61,7 +61,7 @@
         </p>
      </div>
       
-     <div class="skill-left-col">
+     <div class="skill-right-col">
        <h2>My<span style="color:#74b9ff"> Skills</h2>
        <p>
         Adobe After Effects
