--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
      </div>
    </div>
    </section>
+    
+   <div class="social-links">
+    <a href="#"><i class="fa fa-facebook"></i></a>
+    <a href="#"><i class="fa fa-instagram"></i></a>
+   </div>
 
 </body>
 
