--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
        </label>
        <a class="logo" href="index.html">Desmond Yeoh</a>
        </label>
+       <ul class="links">
+        <li><a href="Home.html">HOME</a></li>
+        <li><a href="Cartoon.html">Cartoon</a></li>
+       </ul>
      </nav>
   </header>
   
