--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
        <a class="logo" href="index.html">Desmond Yeoh</a>
        </label>
        <ul class="links">
-        <li><a href="Home.html">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="Cartoon.html">Cartoon</a></li>
        </ul>
      </nav>
