--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        </label>
        <ul class="links">
         <li><a href="index.html">HOME</a></li>
-        <li><a href="Cartoon.html">Cartoon</a></li>
+        <li><a href="cartoon.html">Cartoon</a></li>
        </ul>
      </nav>
   </header>
