--- a/cartoon.html
+++ b/cartoon.html
@@ -34,11 +34,11 @@
      </nav>
   </header>
 
-  <div class=“video-wrapper”>
+  <ul class=“video-wrapper”>
    <video id="myVideo">
     <video src="fairy%20little%20(1).mp4" type="video/mp4"> 
    </video>
-  </div>
+  </ul>
 
   <ul class="my-controls">
    <li onclick="playVideo()">Play</li>
