--- a/art.html
+++ b/art.html
@@ -29,7 +29,7 @@
        </label>
        <ul class="links">
         <li><a href="index.html">HOME</a></li>
-        <li><a href="cartoon.html">CARTOON</a></li>
+        <li><a href="art.html">ART</a></li>
        </ul>
      </nav>
   </header>
