--- a/art.html
+++ b/art.html
@@ -34,37 +34,17 @@
      </nav>
   </header>
 
-  <ul class=“video-wrapper”>
-   <video id="myVideo">
-    <video src="fairy%20little%20(1).mp4" type="video/mp4"> 
-   </video>
-  </ul>
-
-  <ul class="my-controls">
-   <li onclick="playVideo()">Play</li>
-   <li onclick="pauseVideo()">Pause</li>
-   <li onclick="muteVideo()">Mute</li>
-   <li onclick="unmuteVideo()">Unmute</li>
-  </ul>
-
-  <script>
-   var my = document.getElementById("myVideo");
-   function playVideo(){
-    my.play();
-   }
-   
-   function pauseVideo(){
-    my.pause();
-   }
-   
-   function muteVideo(){
-    my.muted=true;
-   }
-   
-   function unmuteVideo(){
-    my.unmuted=false;
-   }
-  </script>
+  <section>
+   <div class="container">
+     <div class="left">
+       <h2>Personal's<span style="color:#74b9ff"> Art</h2>
+       <p>Show Oneself Up. Please enjoy!</p>
+     </div>
+     <div class="right">
+       <img src="Images/cute.gif">
+     </div>
+   </div>
+   </section>
   
   
   </body>
