--- a/art.html
+++ b/art.html
@@ -41,7 +41,7 @@
        <p>Show Oneself Up. Please enjoy!</p>
      </div>
      <div class="right">
-       <img src="Images/cute.gif">
+       <img src="cute.gif">
      </div>
    </div>
    </section>
