--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
    </section>
     
    <div class="social-links">
-    <a href="#"><i class="fa fa-facebook"></i></a>
+    <a href="#"><i class="fa fa-facebook" onclick="https://www.facebook.com/desmond.yeoh.90/"></i></a>
     <a href="#"><i class="fa fa-instagram"></i></a>
    </div>
 
