--- a/art.html
+++ b/art.html
@@ -35,7 +35,7 @@
   </header>
 
   <section>
-   <div class="container">
+   <div class="container2">
      <div class="left">
        <h2>Personal's<span style="color:#74b9ff"> Art</h2>
        <p>Show Oneself Up. Please enjoy!</p>
