--- a/art.html
+++ b/art.html
@@ -36,11 +36,11 @@
 
   <section>
    <div class="container2">
-     <div class="left">
+     <div class="left2">
        <h2>Personal's<span style="color:#74b9ff"> Art</h2>
        <p>Show Oneself Up. Please enjoy!</p>
      </div>
-     <div class="right">
+     <div class="right2">
        <img src="cute.gif">
      </div>
    </div>
