--- a/art.html
+++ b/art.html
@@ -45,6 +45,18 @@
      </div>
    </div>
    </section>
+   
+   <section>
+   <div class="container2">
+     <div class="left2">
+       <img src="Assignment1_Coverpage.jpg">
+     </div>
+     <div class="right2">
+       <h2>Adobe<span style="color:#ff0000"> InDesign</h2>
+       <p>Using Adobe InDesign to design a Cover page.</p>
+     </div>
+   </div>
+   </section>
   
   
   </body>
