--- a/art.html
+++ b/art.html
@@ -57,6 +57,19 @@
      </div>
    </div>
    </section>
+    
+   <section>
+   <div class="container2">
+     <div class="left4">
+       <h2>Blen<span style="color:#ffa500">der</h2>
+       <p>Create a character using Blender.</p>
+     </div>
+     <div class="right4">
+       <img src="0030.png">
+     </div>
+   </div>
+   </section>
+   
   
   
   </body>
