--- a/art.html
+++ b/art.html
@@ -65,7 +65,7 @@
        <p>Create a character using Blender.</p>
      </div>
      <div class="right4">
-       <img src="0030.png">
+       <img src="0030.png" width="50%">
      </div>
    </div>
    </section>
