--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <title>Desmond Yeoh Zi Jian</title>
    <link rel="stylesheet" href="style.css">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name = "keyword" content = "Desmond Yeoh Zi Jian"> 
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
   <!-- Global site tag (gtag.js) - Google Analytics -->
