--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
      <p>Web Developer, with extensive knowledge and years of experience, working in quality work.</p>
     </div>
     <div class="right">
-     <img src="mmexport1553439707484.jpg" alt ="Come make friends!" width = 55%>
+     <img src="mmexport1553439707484.jpg" alt ="Desmond Yeoh Zi Jian" width = 55%>
     </div>
    </div>
   </section>
